# gnome-contacts

./: .buildconfig  .editorconfig  .gitignore  .gitlab-ci.yml  AUTHORS  COPYING  Makefile.am  NEWS  README.md  autogen.sh  configure  configure.ac  gnome-contacts.doap  meson.build  meson_options.txt  org.gnome.Contacts.json
.gitlab-ci/: build.sh
_build/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  config.h
build-aux/: run-uncrustify.sh  uncrustify.cfg
data/: Makefile.am  contacts.gresource.xml  gnome-contacts-search-provider.ini.in  gnome-contacts.appdata.xml  gnome-contacts.appdata.xml.in  gnome-contacts.css  gnome-contacts.desktop.in.in  gnome-contacts.xml  meson.build  org.gnome.Contacts.SearchProvider.service.in  org.gnome.Contacts.appdata.xml.in  org.gnome.Contacts.appdata.xml.in.in  org.gnome.Contacts.desktop.in  org.gnome.Contacts.desktop.in.in  org.gnome.Contacts.metainfo.xml.in.in  org.gnome.Contacts.search-provider.ini  org.gnome.Contacts.search-provider.ini.in  org.gnome.Contacts.service.in  style.css
data/flatpak/: org.gnome.Contacts.Devel.json  org.gnome.Contacts.json  org.gnome.Contacts.yml
data/gtk/: help-overlay.blp  help-overlay.ui  menus.ui
data/icons/: Makefile.am
data/ui/: app-menu.ui  contacts-accounts-list.ui  contacts-add-address-book-dialog.ui  contacts-address-map.ui  contacts-avatar-dialog.ui  contacts-avatar-selector.blp  contacts-avatar-selector.ui  contacts-birthday-editor.blp  contacts-birthday-editor.ui  contacts-contact-editor.ui  contacts-contact-form.ui  contacts-contact-pane.blp  contacts-contact-pane.ui  contacts-contact-sheet-row.blp  contacts-contact-sheet-row.ui  contacts-contact-sheet.ui  contacts-crop-cheese-dialog.ui  contacts-crop-dialog.blp  contacts-crop-dialog.ui  contacts-editable-avatar.blp  contacts-editable-avatar.ui  contacts-editor-menu.ui  contacts-import-dialog.blp  contacts-import-dialog.ui  contacts-in-app-notification.ui  contacts-link-suggestion-grid.blp  contacts-link-suggestion-grid.ui  contacts-linked-personas-dialog.ui  contacts-list-pane.ui  contacts-main-window.blp  contacts-main-window.ui  contacts-preferences-window.blp  contacts-preferences-window.ui  contacts-qr-code-dialog.blp  contacts-qr-code-dialog.ui  contacts-setup-window.blp  contacts-setup-window.ui  contacts-shortcuts-dialog.blp  contacts-window.ui  style.css
docs/: meson.build
man/: Makefile.am  gnome-contacts.xml  meson.build
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ab.po  af.po  ar.po  as.po  ast.po  be.po  bg.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  fy.po  ga.po  gd.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  (+43 more)
src/: .gitignore  Makefile.am  app-menu.ui  cc-crop-area.c  cc-crop-area.h  cheese-flash.c  cheese-flash.h  cheese-widget.h  contacts-abstract-field-details-sorter.vala  contacts-accounts-list.vala  contacts-add-address-book-dialog.vala  contacts-address-book-type.vala  contacts-address-map.vala  contacts-addressbook-dialog.vala  contacts-addressbook-list.vala  contacts-app.vala  contacts-avatar-dialog.vala  contacts-avatar-menu.vala  contacts-avatar-selector.vala  contacts-avatar-utils.vala  contacts-avatar.vala  contacts-cell-renderer-shape.vala  contacts-chunk-empty-filter.vala  contacts-chunk-filter.vala  contacts-chunk-property-filter.vala  contacts-chunk-sorter.vala  contacts-clickable.vala  contacts-contact-editor.vala  contacts-contact-form-field.vala  contacts-contact-form.vala  contacts-contact-frame.vala  contacts-contact-list.vala  contacts-contact-pane.vala  contacts-contact-selection-model.vala  contacts-contact-sheet-row.vala  contacts-contact-sheet.vala  contacts-contact.vala  contacts-crop-cheese-dialog.vala  contacts-crop-dialog.vala  contacts-delete-operation.vala  (+66 more)
src/core/: contacts-addresses-chunk.vala  contacts-alias-chunk.vala  contacts-avatar-chunk.vala  contacts-bin-chunk.vala  contacts-birthday-chunk.vala  contacts-chunk.vala  contacts-contact.vala  contacts-email-addresses-chunk.vala  contacts-full-name-chunk.vala  contacts-im-addresses-chunk.vala  contacts-nickname-chunk.vala  contacts-notes-chunk.vala  contacts-phones-chunk.vala  contacts-roles-chunk.vala  contacts-structured-name-chunk.vala  contacts-type-descriptor.vala  contacts-type-set.vala  contacts-urls-chunk.vala  contacts-vcard-type-mapping.vala  meson.build
src/editor/: contacts-editor-addresses-editor.vala  contacts-editor-avatar-editor.vala  contacts-editor-birthday-editor.vala  contacts-editor-composite-editor.vala  contacts-editor-contact-editor.vala  contacts-editor-details-editor-factory.vala  contacts-editor-details-editor.vala  contacts-editor-emails-editor.vala  contacts-editor-full-name-editor.vala  contacts-editor-nickname-editor.vala  contacts-editor-notes-editor.vala  contacts-editor-phones-editor.vala  contacts-editor-urls-editor.vala
src/io/: contacts-io-export-operation.vala  contacts-io-import-main.vala  contacts-io-importer.vala  contacts-io-parse-main.vala  contacts-io-parse-operation.vala  contacts-io-parser.vala  contacts-io-vcard-export-operation.vala  contacts-io-vcard-importer.vala  contacts-io-vcard-parser.vala  contacts-io.vala  meson.build
tests/: basic-test.vala  meson.build
tests/core/: meson.build  test-addresses-chunk.vala  test-birthday-chunk.vala  test-email-addresses-chunk.vala  test-full-name-chunk.vala  test-nickname-chunk.vala  test-notes-chunk.vala  test-phones-chunk.vala  test-roles-chunk.vala  test-structured-name-chunk.vala  test-urls-chunk.vala
tests/io/internal/: meson.build  test-serialise-birthday.vala  test-serialise-common.vala  test-serialise-emails.vala  test-serialise-full-name.vala  test-serialise-nickname.vala  test-serialise-structured-name.vala  test-serialise-urls.vala
tests/io/vcard/: meson.build  minimal.vcf  test-vcard-bday.vala  test-vcard-email.vala  test-vcard-minimal-import.vala  test-vcard-minimal.vala
vapi/: Makefile.am  cheese-gtk.vapi  cheese.vapi  config.vapi  custom.vapi  gnome-desktop-3.0.vapi  (+3 more)
(+140 files in other folders)
